[tool.poetry]
name = "astboom"
version = "0.1.0"
description = ""
authors = ["Kirill Borisov <lensvol@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
asciitree = "^0.3.3"
click = "^7.0"

[tool.poetry.dev-dependencies]
ipython = {version = "^7.8", optional = true}

[tool.poetry.scripts]
astboom = 'astboom.main:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
