[tool.poetry]
name = "astboom"
version = "0.2.0"
license = "MIT"
readme = "README.md"
repository = "https://github.com/lensvol/astboom"
keywords = ["ast"]
description = "Visualize Python AST in console."
authors = ["Kirill Borisov <lensvol@gmail.com>"]
include = [
    "LICENSE",
]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Utilities",
    "Topic :: Software Development",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.6",
    "Topic :: Software Development :: Quality Assurance",
]


[tool.poetry.dependencies]
python = "^3.6"
asciitree = "^0.3.3"
click = "^7.0"

[tool.poetry.dev-dependencies]
ipython = {version = "^7.8", optional = true}

[tool.poetry.scripts]
astboom = 'astboom.main:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
